@@ -9,6 +9,8 @@
 - Script changes are now automatically applied when running/ saving the experiment
 - Renamed "Tools" to "Options" in menu
 - Added immediate rename option, to rename items as soon as they are created (default = off)
+- Fixed openexp.experiment.sound_init() to be compatible with older PyGame versions (tested on 1.8.1)
+- Added sound_sample_size and sound_channels to sound settings in openexp.experiment
 
 0.22 "Axiomatic Axelrod"
 - Added search capabilities to inline_editor and a notification of unapplied changes
